fixed settings layout break

--- a/assets/scss/admin-dashboard/_tutor-admin.scss
+++ b/assets/scss/admin-dashboard/_tutor-admin.scss
@@ -80,6 +80,14 @@
 	padding: 20px 0;
 	font-size: 14px;
 	line-height: 1.3;
+
+	&.tutor-d-flex {
+		display: flex;
+	}
+
+	&.tutor-d-block {
+		display: block;
+	}
 }
 
 .tutor-option-field-row:last-child {
